crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__custom_dummy_var_regexp_preset__RUF052_RUF052_0.py_2.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF052 Local dummy variable `_var` is accessed
  --> RUF052_0.py:92:9
   |
92 |         _var = "method variable" # [RUF052]
   |         ^^^^
   |
help: Remove leading underscores

RUF052 Local dummy variable `_list` is accessed
  --> RUF052_0.py:99:5
   |
99 |     _list = "built-in" # [RUF052]
   |     ^^^^^
   |
help: Prefer using trailing underscores to avoid shadowing a built-in

RUF052 Local dummy variable `_x` is accessed
   --> RUF052_0.py:106:5
    |
106 |     _x = "shadows global" # [RUF052]
    |     ^^
    |
help: Prefer using trailing underscores to avoid shadowing a variable

RUF052 Local dummy variable `x` is accessed
   --> RUF052_0.py:110:3
    |
110 |   x = "outer"
    |   ^
    |

RUF052 Local dummy variable `_x` is accessed
   --> RUF052_0.py:113:5
    |
113 |     _x = "shadows nonlocal" # [RUF052]
    |     ^^
    |
help: Prefer using trailing underscores to avoid shadowing a variable

RUF052 Local dummy variable `_x` is accessed
   --> RUF052_0.py:120:5
    |
120 |     _x = "shadows local" # [RUF052]
    |     ^^
    |
help: Prefer using trailing underscores to avoid shadowing a variable

RUF052 Local dummy variable `_GLOBAL_1` is accessed
   --> RUF052_0.py:128:5
    |
128 |     _GLOBAL_1 = "foo"
    |     ^^^^^^^^^
    |
help: Prefer using trailing underscores to avoid shadowing a variable

RUF052 Local dummy variable `_local` is accessed
   --> RUF052_0.py:136:5
    |
136 |     _local = "local3"  # [RUF052]
    |     ^^^^^^
    |
help: Prefer using trailing underscores to avoid shadowing a variable

RUF052 Local dummy variable `_GLOBAL_1` is accessed
   --> RUF052_0.py:140:9
    |
140 |         _GLOBAL_1 = "foo"
    |         ^^^^^^^^^
    |
help: Prefer using trailing underscores to avoid shadowing a variable

RUF052 Local dummy variable `_local` is accessed
   --> RUF052_0.py:145:9
    |
145 |         _local = "local4"
    |         ^^^^^^
    |
help: Prefer using trailing underscores to avoid shadowing a variable

RUF052 Local dummy variable `_P` is accessed
   --> RUF052_0.py:153:5
    |
153 |     _P = ParamSpec("_P")
    |     ^^
    |
help: Remove leading underscores

RUF052 Local dummy variable `_T` is accessed
   --> RUF052_0.py:154:5
    |
154 |     _T = TypeVar(name="_T", covariant=True, bound=int|str)
    |     ^^
    |
help: Remove leading underscores

RUF052 Local dummy variable `_NT` is accessed
   --> RUF052_0.py:155:5
    |
155 |     _NT = NamedTuple("_NT", [("foo", int)])
    |     ^^^
    |
help: Remove leading underscores

RUF052 Local dummy variable `_E` is accessed
   --> RUF052_0.py:156:5
    |
156 |     _E = Enum("_E", ["a", "b", "c"])
    |     ^^
    |
help: Remove leading underscores

RUF052 Local dummy variable `_NT2` is accessed
   --> RUF052_0.py:157:5
    |
157 |     _NT2 = namedtuple("_NT2", ['x', 'y', 'z'])
    |     ^^^^
    |
help: Remove leading underscores

RUF052 Local dummy variable `_NT3` is accessed
   --> RUF052_0.py:158:5
    |
158 |     _NT3 = namedtuple(typename="_NT3", field_names=['x', 'y', 'z'])
    |     ^^^^
    |
help: Remove leading underscores

RUF052 Local dummy variable `_DynamicClass` is accessed
   --> RUF052_0.py:159:5
    |
159 |     _DynamicClass = type("_DynamicClass", (), {})
    |     ^^^^^^^^^^^^^
    |
help: Remove leading underscores

RUF052 Local dummy variable `_NotADynamicClass` is accessed
   --> RUF052_0.py:160:5
    |
160 |     _NotADynamicClass = type("_NotADynamicClass")
    |     ^^^^^^^^^^^^^^^^^
    |
help: Remove leading underscores

RUF052 Local dummy variable `other` is accessed
   --> RUF052_0.py:177:13
    |
177 |         for other in self.connected:
    |             ^^^^^
    |

RUF052 Local dummy variable `_dummy_var` is accessed
   --> RUF052_0.py:182:5
    |
182 |     _dummy_var = 42
    |     ^^^^^^^^^^
    |
help: Prefer using trailing underscores to avoid shadowing a variable

RUF052 Local dummy variable `_dummy_var` is accessed
   --> RUF052_0.py:192:5
    |
192 |     _dummy_var = 42
    |     ^^^^^^^^^^
    |
help: Prefer using trailing underscores to avoid shadowing a variable
